--- a/EW&M WIKI/index.html
+++ b/EW&M WIKI/index.html
@@ -14,6 +14,10 @@
     <header>
         <div class="logo-icon"></div>
         <div class="header-title">EXPLORER'S WORLDMAP & MINIMAP</div>
+        <button class="download-btn" onclick="location.href='#downloads'">
+            DOWNLOAD
+        </button>
+
     </header>
 
     <div class="page">
@@ -328,7 +332,7 @@
                 </div>
 
             </div>
-            <div class="sidebar-card">
+            <div class="sidebar-card" id="downloads">
                 <h3>Download V1.2.8<div class="version-meta">Redirected to CurseForge</div>
                 </h3>
 
