--- a/EW&M WIKI/index.html
+++ b/EW&M WIKI/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="logo-icon"></div>
-        <div class="header-title">EW&M</div>
+        <div class="header-title">EXPLORER'S WORLDMAP & MINIMAP</div>
         <button class="download-btn" onclick="location.href='#downloads'">
             DOWNLOAD
         </button>
@@ -408,4 +408,3 @@
 </body>
 
 </html>
-
